<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_main">




    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#80000000"
            android:id="@+id/redButton"
            android:src="@drawable/loxx_logo_left"
            android:textColor="#FFFFFF"
            android:scaleType="centerCrop"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp"
            android:transitionName="left">

        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/blueButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="information">

            <ImageView
                android:id="@+id/information_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_info_outline_white_48dp"
                android:transitionName="information_imageView"
                app:srcCompat="@drawable/ic_baseline_info" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/info_button_desc_string"
                android:id="@+id/textView2"
                android:layout_below="@+id/information_imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/yellowButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="tariff_layout">

            <ImageView
                android:id="@+id/tariff_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_euro_symbol_white_48dp"
                android:transitionName="tariff"
                app:srcCompat="@drawable/ic_baseline_euro" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/tariff_button_desc_string"
                android:id="@+id/textView3"
                android:layout_below="@+id/tariff_imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/loxx_logo_right"
            android:background="#80000000"
            android:id="@+id/greenButton"
            android:textColor="#FFFFFF"
            android:scaleType="centerCrop"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp">

        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/pinkButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="openinghours_layout">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_access_time_white_48dp"
                android:transitionName="openinghours_imageView"
                app:srcCompat="@drawable/ic_baseline_time" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/openinghours_button_desc_string"
                android:id="@+id/textView5"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/orangeButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="appointment_layout">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/transitionIcon"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true"
                android:transitionName="appointment"
                android:src="@mipmap/ic_content_cut_white_48dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/appointment_button_desc_string"
                android:id="@+id/textView6"
                android:layout_below="@+id/transitionIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>