<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:baselineAligned="false"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background_main">


    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#FF9B57"
            android:id="@+id/redButton"
            android:src="@drawable/loxx_logo_left"
            android:textColor="#FFFFFF"
            android:scaleType="centerCrop"
            android:layout_marginBottom="1dp"
            android:layout_marginTop="1dp"
            android:layout_marginLeft="1dp">

        </ImageView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/blueButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="tariff">

            <ImageView
                android:id="@+id/information_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_email_white_48dp"
                app:srcCompat="@drawable/ic_baseline_email" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/e_mail_button_description_string"
                android:id="@+id/textView2"
                android:layout_below="@+id/information_imageView"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:id="@+id/yellowButton"
            android:textColor="#FFFFFF"
            android:layout_margin="1dp"
            android:scaleType="center"
            android:transitionName="appointment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/adres_button_desc_string"
                android:gravity="center"
                android:id="@+id/textView3"
                android:layout_marginTop="10dp"
                android:textColor="#FFFFFF"
                android:layout_below="@+id/tariff_imageView"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/tariff_imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_location_on_white_48dp"
                app:srcCompat="@drawable/ic_baseline_location" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:weightSum="3"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/loxx_logo_right"
            android:background="#FF9B57"
            android:id="@+id/greenButton"
            android:textColor="#FFFFFF"
            android:scaleType="centerCrop"
            android:layout_marginTop="1dp"
            android:layout_marginRight="1dp"
            android:layout_marginBottom="1dp">

        </ImageView>

        <RelativeLayout
            android:id="@+id/pinkButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:scaleType="center"
            android:textColor="#FFFFFF"
            android:transitionName="information_imageView">

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:src="@mipmap/ic_call_white_48dp"
                app:srcCompat="@mipmap/ic_call_white_48dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="@string/call_us_button_desc_string"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/orangeButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="1"
            android:background="#1877F2"
            android:scaleType="center"
            android:textColor="#FFFFFF"
            android:transitionName="openinghours_imageView">

            <ImageView
                android:id="@+id/transitionIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:adjustViewBounds="true"
                android:maxWidth="48dp"
                android:maxHeight="48dp"
                android:minWidth="47dp"
                android:minHeight="47dp"
                android:src="@mipmap/fb_logo_white_broadcast"
                app:srcCompat="@drawable/ic_facebook" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/transitionIcon"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:text="Facebook"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FFFFFF" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
